--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aquamarine;
+    background-color: #777;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
